@@ -33,6 +33,7 @@ import java.util.regex.Pattern;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.Lists;
 import com.google.common.collect.Sets;
+import org.apache.avro.Schema;
 import org.apache.commons.io.IOUtils;
 import org.apache.hadoop.conf.Configuration;
 import org.apache.hadoop.fs.FSDataInputStream;
@@ -46,10 +47,13 @@ import org.apache.hadoop.mapreduce.lib.output.TextOutputFormat;
 import org.junit.Test;
 
 import org.kiji.mapreduce.framework.KijiTableInputFormat;
+import org.kiji.schema.DecodedCell;
 import org.kiji.schema.EntityId;
 import org.kiji.schema.KijiDataRequest;
 import org.kiji.schema.KijiDataRequestBuilder.ColumnsDef;
 import org.kiji.schema.KijiRowData;
+import org.kiji.schema.filter.ColumnValueEqualsRowFilter;
+import org.kiji.schema.filter.KijiRowFilter;
 import org.kiji.schema.testutil.FooTableIntegrationTest;
 
 /** Tests for the KijiTableInputFormat. */
@@ -98,7 +102,18 @@ public class IntegrationTestKijiTableInputFormat
     }
   }
 
-  public Job setupJob() throws Exception {
+  private Job setupJob(EntityId start, EntityId limit, KijiRowFilter filter) throws Exception {
+    return setupJob("job", createOutputFile(), null, null, start, limit, filter);
+  }
+
+  public Job setupJob(
+      String jobName,
+      Path outputFile,
+      Class<? extends Mapper> mapperClass,
+      Class<? extends Reducer> reducerClass,
+      EntityId startKey,
+      EntityId limitKey,
+      KijiRowFilter filter) throws Exception {
     final Job job = new Job(createConfiguration());
     final Configuration conf = job.getConfiguration();
 
@@ -110,7 +125,8 @@ public class IntegrationTestKijiTableInputFormat
     job.setJarByClass(IntegrationTestKijiTableInputFormat.class);
 
     // Setup the InputFormat.
-    KijiTableInputFormat.configureJob(job, getFooTable().getURI(), request, null, null);
+    KijiTableInputFormat.configureJob(job, getFooTable().getURI(), request,
+        startKey, limitKey, filter);
     job.setInputFormatClass(KijiTableInputFormat.class);
 
     // Duplicate functionality from MapReduceJobBuilder, since we are not using it here:
@@ -123,17 +139,8 @@ public class IntegrationTestKijiTableInputFormat
     }
     DistributedCacheJars.addJarsToDistributedCache(job, jarFiles);
 
-    return job;
-  }
-
-  /** Test KijiTableInputFormat in a map-only job. */
-  @Test
-  public void testMapJob() throws Exception {
     // Create a test job.
-    final Path outputFile = new Path(String.format("/%s-%s-%d/part-r-00000",
-        getClass().getName(), mTestName.getMethodName(), System.currentTimeMillis()));
-    final Job job = setupJob();
-    job.setJobName("testMapJob");
+    job.setJobName(jobName);
 
     // Setup the OutputFormat.
     TextOutputFormat.setOutputPath(job, outputFile.getParent());
@@ -142,7 +149,35 @@ public class IntegrationTestKijiTableInputFormat
     job.setOutputFormatClass(TextOutputFormat.class);
 
     // Set the mapper class.
-    job.setMapperClass(TestMapper.class);
+    if (null != mapperClass) {
+      job.setMapperClass(mapperClass);
+    }
+    // Set the reducer class.
+    if (null != reducerClass) {
+      job.setReducerClass(reducerClass);
+    }
+
+    return job;
+  }
+
+  private Path createOutputFile() {
+    return new Path(String.format("/%s-%s-%d/part-r-00000",
+        getClass().getName(), mTestName.getMethodName(), System.currentTimeMillis()));
+  }
+
+  /** Test KijiTableInputFormat in a map-only job. */
+  @Test
+  public void testMapJob() throws Exception {
+    final Path outputFile = createOutputFile();
+    // Create a test job.
+    final Job job = setupJob(
+        "testMapJob",
+        outputFile,
+        TestMapper.class,
+        null,  // reducer class
+        null,  // start key
+        null,  // limit key
+        null); // filter
 
     // Run the job.
     assertTrue("Hadoop job failed", job.waitForCompletion(true));
@@ -172,24 +207,96 @@ public class IntegrationTestKijiTableInputFormat
     // see: https://issues.apache.org/jira/browse/HADOOP-7973
   }
 
+  /** Test KijiTableInputFormat in a map-only job with start and limit keys. */
+  @Test
+  public void testMapJobWithStartAndLimitKeys() throws Exception {
+    final Path outputFile = createOutputFile();
+    // Set the same entity IDs for start and limit, and we should get just the start row
+    final EntityId startAndLimitKey = getFooTable().getEntityId("jane.doe@gmail.com");
+    // Create a test job.
+    final Job job = setupJob(
+        "testMapJobWithStartAndLimitKeys",
+        outputFile,
+        TestMapper.class,
+        null,  // reducer class
+        startAndLimitKey,
+        startAndLimitKey,
+        null); // filter
+
+    // Run the job.
+    assertTrue("Hadoop job failed", job.waitForCompletion(true));
+
+    // Check to make sure output exists.
+    final FileSystem fs = FileSystem.get(job.getConfiguration());
+    assertTrue(fs.exists(outputFile.getParent()));
+
+    // Verify that the output matches what's expected.
+    final FSDataInputStream in = fs.open(outputFile);
+    final Set<String> actual = Sets.newHashSet(IOUtils.toString(in).trim().split("\n"));
+    final Set<String> expected = Sets.newHashSet(
+        "gmail.com\tJane Doe");
+    assertEquals("Result of job wasn't what was expected", expected, actual);
+
+    // Clean up.
+    fs.delete(outputFile.getParent(), true);
+
+    IOUtils.closeQuietly(in);
+    // NOTE: fs should get closed here, but doesn't because of a bug with FileSystem that
+    // causes it to close other thread's filesystem objects. For more information
+    // see: https://issues.apache.org/jira/browse/HADOOP-7973
+  }
+
+  /** Test KijiTableInputFormat in a map-only job with a row filter. */
+  @Test
+  public void testMapJobWithFilter() throws Exception {
+    final KijiRowFilter filter = new ColumnValueEqualsRowFilter("info", "email",
+        new DecodedCell<String>(Schema.create(Schema.Type.STRING), "aaron@usermail.example.com"));
+    final Path outputFile = createOutputFile();
+    // Create a test job.
+    final Job job = setupJob(
+        "testMapJobWithFilter",
+        outputFile,
+        TestMapper.class,
+        null, // reducer class
+        null, // start key
+        null, // limit key
+        filter);
+
+    // Run the job.
+    assertTrue("Hadoop job failed", job.waitForCompletion(true));
+
+    // Check to make sure output exists.
+    final FileSystem fs = FileSystem.get(job.getConfiguration());
+    assertTrue(fs.exists(outputFile.getParent()));
+
+    // Verify that the output matches what's expected.
+    final FSDataInputStream in = fs.open(outputFile);
+    final Set<String> actual = Sets.newHashSet(IOUtils.toString(in).trim().split("\n"));
+    final Set<String> expected = Sets.newHashSet("usermail.example.com\tAaron Kimball");
+    assertEquals("Result of job wasn't what was expected", expected, actual);
+
+    // Clean up.
+    fs.delete(outputFile.getParent(), true);
+
+    IOUtils.closeQuietly(in);
+    // NOTE: fs should get closed here, but doesn't because of a bug with FileSystem that
+    // causes it to close other thread's filesystem objects. For more information
+    // see: https://issues.apache.org/jira/browse/HADOOP-7973
+  }
+
   /** Test KijiTableInputFormat in a MapReduce job. */
   @Test
   public void testMapReduceJob() throws Exception {
+    final Path outputFile = createOutputFile();
     // Create a test job.
-    final Path outputFile = new Path(String.format("/%s-%s-%d/part-r-00000",
-        getClass().getName(), mTestName.getMethodName(), System.currentTimeMillis()));
-    final Job job = setupJob();
-    job.setJobName("testMapReduceJob");
-
-    // Setup the OutputFormat
-    TextOutputFormat.setOutputPath(job, outputFile.getParent());
-    job.setOutputKeyClass(Text.class);
-    job.setOutputValueClass(Text.class);
-    job.setOutputFormatClass(TextOutputFormat.class);
-
-    // Set the mapper and reducer.
-    job.setMapperClass(TestMapper.class);
-    job.setReducerClass(TestReducer.class);
+    final Job job = setupJob(
+        "testMapReduceJob",
+        outputFile,
+        TestMapper.class,
+        TestReducer.class,
+        null,  // start key
+        null,  // limit key
+        null); // filter
 
     // Run the job.
     assertTrue("Hadoop job failed", job.waitForCompletion(true));
